# deno_varnish

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  default.vcl  deno-compile.compute.json  deno-run.compute.json  deno-varnish.compute.json  deno-varnish.vcl  deno.vcl  hello.ext.js  hello.ffi.ts  main.js  output.ext.js  output.ffi.ts  output.html  output.js  renderer.ffi.ts  rust.compute.json  rust.vcl  varnish.ts
benches/: invoke_op.rs
src/: bootstrap.js  lib.rs  main.rs
